# SharePaste

./: .gitignore  CMakeLists.txt  README.md  dockerfile
.github/workflows/: cmake-multi-platform.yml  docker-image-build.yml  docker-image.yml
src/: hello.cpp
src/backend/: main.cpp
src/backend/dbmanager/: dbmanager.cpp  dbmanager.h
src/backend/testtools/: testtools.cpp  testtools.h
src/backend/utility/: utility.cpp  utility.h
src/frontend/: index.html  script.js  style.css
src/frontend/favicon/: site.webmanifest
